<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/material_dynamic_primary80"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangky"
        android:layout_above="@+id/InKhungDangKy"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white">
    </TextView>

    <LinearLayout
        android:id = "@+id/InKhungDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/tendangnhap"
            android:textColorHint="@color/colorGray"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/baseline_account_box_24"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/matkhau"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/baseline_account_box_24"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:password="true"
            />
        <EditText
            android:id="@+id/edt_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="Nhập lại mật khẩu"
            android:textColorHint="@color/colorGray"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:password="true"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ" >
            </RadioButton>
        </RadioGroup>
        <EditText
            android:id="@+id/edt_ngaysinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/ngaysinh"
            android:textColorHint="@color/colorGray"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/baseline_calendar_month_24"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/edt_cmnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/CMND"
            android:textColorHint="@color/colorGray"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/baseline_card_membership_24"
            android:drawablePadding="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangky"
                android:backgroundTint="@color/colorGreenButton"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="10dp">
            </Button>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangnhap"
                android:backgroundTint="@color/colorPrimary"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="10dp">
            </Button>
            <Button
                android:id="@+id/btn_thoat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoat"
                android:backgroundTint="@color/colorOrganButton"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="10dp">
            </Button>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>